--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -2158,4 +2158,10 @@ url={https://openreview.net/forum?id=BtZBwwjO5d}
   journal={CoLM},
   year={2025}
 }
+@article{kapoor2024ai,
+  title={Ai agents that matter},
+  author={Kapoor, Sayash and Stroebl, Benedikt and Siegel, Zachary S and Nadgir, Nitya and Narayanan, Arvind},
+  journal={arXiv preprint arXiv:2407.01502},
+  year={2024}
+}
 
