Fixed all the citation issues

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -3,12 +3,15 @@ layout: distill
 title: Computer Use Survey - A Visual Survey of Computer Use Agents
 description: A comprehensive survey exploring the evolution and current state of AI agents that interact with computers and web interfaces, from early reinforcement learning to modern LLM-based systems.
 tags: ai agents computer-use web-agents llm
-giscus_comments: false
+future: true
 date: 2026-04-27
-featured: true
 mermaid:
   enabled: true
   zoomable: true
+
+
+bibliography: 2026-04-27-web-agent.bib
+
 toc:
   - name: Introduction
   - name: What is Computer Use
@@ -21,8 +24,6 @@ authors:
   - name: Anonymous
     affiliations:
       name: Anonymous
-
-bibliography: 2026-04-27-web-agent.bib
 
 _styles: >
   .fake-img {
@@ -141,7 +142,7 @@ WEBRL <d-cite key="qi2024webrl"></d-cite> adopted a full RL training loop for ex
 
 ### Multi-task Agent Foundation Models
 
-Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="zot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
+Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
 
 
 ### Firmament
