Observatory is up!

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -145,10 +145,8 @@ WEBRL <d-cite key="qi2024webrl"></d-cite> adopted a full RL training loop for ex
 ### Multi-task Agent Foundation Models
 
 Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
-=======
-Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="zot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings. Others have trained foundation models exclusively for GUI agents by training across many different GUI environments <d-cite key="huang2025spiritsight"></d-cite>.
->>>>>>> 6d28e719674b57589e87687ba84e74b81bf0b9d7
 
+Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings. Others have trained foundation models exclusively for GUI agents by training across many different GUI environments <d-cite key="huang2025spiritsight"></d-cite>.
 
 ### Firmament
 
