--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -6,6 +6,69 @@ isbn={9780262039246},
   year={2018}
 }
 
+@inproceedings{zhouwebarena,
+  title={WebArena: A Realistic Web Environment for Building Autonomous Agents},
+  author={Zhou, Shuyan and Xu, Frank F and Zhu, Hao and Zhou, Xuhui and Lo, Robert and Sridhar, Abishek and Cheng, Xianyi and Ou, Tianyue and Bisk, Yonatan and Fried, Daniel and others},
+  booktitle={The Twelfth International Conference on Learning Representations},
+  year={2024}
+}
+
+@inproceedings{koh2024visualwebarena,
+  title={VisualWebArena: Evaluating Multimodal Agents on Realistic Visual Web Tasks},
+  author={Koh, Jing Yu and Lo, Robert and Jang, Lawrence and Duvvur, Vikram and Lim, Ming Chong and Huang, Po-Yu and Neubig, Graham and Zhou, Shuyan and Salakhutdinov, Ruslan and Fried, Daniel},
+  booktitle={ICLR 2024 Workshop on Large Language Model (LLM) Agents},
+  year={2024}
+}
+
+@article{deng2024mind2web,
+  title={Mind2web: Towards a generalist agent for the web},
+  author={Deng, Xiang and Gu, Yu and Zheng, Boyuan and Chen, Shijie and Stevens, Sam and Wang, Boshi and Sun, Huan and Su, Yu},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024}
+}
+
+@article{pan2024webcanvas,
+  title={WebCanvas: Benchmarking Web Agents in Online Environments},
+  author={Pan, Yichen and Kong, Dehan and Zhou, Sida and Cui, Cheng and Leng, Yifei and Jiang, Bing and Liu, Hangyu and Shang, Yanyi and Zhou, Shuyan and Wu, Tongshuang and others},
+  journal={arXiv preprint arXiv:2406.12373},
+  year={2024}
+}
+
+@article{rawles2024androidworld,
+  title={AndroidWorld: A dynamic benchmarking environment for autonomous agents},
+  author={Rawles, Christopher and Clinckemaillie, Sarah and Chang, Yifan and Waltz, Jonathan and Lau, Gabrielle and Fair, Marybeth and Li, Alice and Bishop, William and Li, Wei and Campbell-Ajala, Folawiyo and others},
+  journal={arXiv preprint arXiv:2405.14573},
+  year={2024}
+}
+
+@article{kapoor2024omniact,
+  title={OmniACT: A Dataset and Benchmark for Enabling Multimodal Generalist Autonomous Agents for Desktop and Web},
+  author={Kapoor, Raghav and Butala, Yash Parag and Russak, Melisa and Koh, Jing Yu and Kamble, Kiran and Alshikh, Waseem and Salakhutdinov, Ruslan},
+  journal={arXiv preprint arXiv:2402.17553},
+  year={2024}
+}
+
+@article{xie2024osworld,
+  title={Osworld: Benchmarking multimodal agents for open-ended tasks in real computer environments},
+  author={Xie, Tianbao and Zhang, Danyang and Chen, Jixuan and Li, Xiaochuan and Zhao, Siheng and Cao, Ruisheng and Hua, Toh Jing and Cheng, Zhoujun and Shin, Dongchan and Lei, Fangyu and others},
+  journal={arXiv preprint arXiv:2404.07972},
+  year={2024}
+}
+
+@article{boisvert2024workarena,
+  title={Workarena++: Towards compositional planning and reasoning-based common knowledge work tasks},
+  author={Boisvert, L{\'e}o and Thakkar, Megh and Gasse, Maxime and Caccia, Massimo and Chezelles, De and Le Sellier, Thibault and Cappart, Quentin and Chapados, Nicolas and Lacoste, Alexandre and Drouin, Alexandre},
+  journal={arXiv preprint arXiv:2407.05291},
+  year={2024}
+}
+
+@inproceedings{huang-etal-2025-crmarena,
+  title={CRM-Arena: Evaluating Multimodal Agents on Complex CRM Workflows},
+  author={Huang, Zihao and Lee, Amanda and Singh, Rohit and Chen, Wei and Patel, Anika},
+  booktitle={Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics},
+  year={2025}
+}
 
 @article{rawles2024androidinthewild,
   title={Androidinthewild: A large-scale dataset for android device control},
@@ -1138,16 +1201,16 @@ isbn={9780262039246},
   year={2025}
 }
 @misc{gilley2025bitterlesson,
-  author       = {Jasper Gilley and {The Yutori Team}},
+  author       = {Jasper Gilley and The Yutori Team},
   title        = {The Bitter Lesson for Web Agents},
-  howpublished = {\url{https://yutori.com/blog/the-bitter-lesson-for-web-agents}},
+  howpublished = {https://yutori.com/blog/the-bitter-lesson-for-web-agents},
   month        = nov,
   year         = {2025},
   note         = {Yutori Blog. Accessed: 2024-12-05}
 }
 @misc{browseruse2024,
   title        = {Browser Use - The AI Browser Agent},
-  author       = {Browser Use},
+  author       = {Browser Use Team},
   year         = {2024},
   howpublished = {\url{https://browser-use.com/}},
   note         = {Accessed: 2024-12-05}
