Adding back intro

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -41,6 +41,17 @@ _styles: >
     font-size: 16px;
   }
 ---
+## Introduction
+
+In the last few years, and particularly in the most recent past year, AI systems which operate on the web and in computer environments have become a significant topic of study, for both academia and industry. If readers skim the citations in this review, they will likely notice that many of the works are extremely recent, most within the past year.
+
+The goal of this survey is first to organize much of the historical and recent work on Computer Use Agents. First, we define exactly what we mean by "Computer Use" in What is Computer Use. We then define and categorize different environments, datasets and evaluations for Computer Use Agents in Environments and Datasets. Next, we discuss the methodological work in this area in Models and Methods focusing in particular on the recent trend of "LLM Agents" and provide an accessible explanation of this class of systems and trends within this research. Finally, we discuss ongoing trends, areas for improvement and possible safety and ethical concerns brought about by this research in Discussion.
+
+So what has shaped this sudden interest in Computer Use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and language and vision models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able to with little or no new training data be generally proficient at many language tasks, making them adaptable to many different problems. Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, it is also linguistically challenging and knowledge-laden. Before these large-scale training models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This makes it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, we have these essential commonsense capabilities to make Web Use Agents possible.
+
+While the precise timing of this work can be explained by the arrival of these capable models, we should also ask what people are trying to accomplish with computer use agents. Many papers point to automating routine, boring or time consuming tasks as a motivation. Many works list automation of tedious tasks or enhancing user experiences as a motivation. The other common motivations are accessibility; making computers and the Internet more generally accessible to those with disabilities. We elaborate on this further in Discussion.
+
+---
 
 ## What is Computer Use
 
