--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -47,7 +47,7 @@ In the last few years, and particularly in the most recent past year, AI systems
 
 The goal of this survey is first to organize much of the historical and recent work on Computer Use Agents. First, we define exactly what we mean by "Computer Use" in What is Computer Use. We then define and categorize different environments, datasets and evaluations for Computer Use Agents in Environments and Datasets. Next, we discuss the methodological work in this area in Models and Methods focusing in particular on the recent trend of "LLM Agents" and provide an accessible explanation of this class of systems and trends within this research. Finally, we discuss ongoing trends, areas for improvement and possible safety and ethical concerns brought about by this research in Discussion.
 
-So what has shaped this sudden interest in Computer Use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and language and vision models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able to with little or no new training data be generally proficient at many language tasks, making them adaptable to many different problems. Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, it is also linguistically challenging and knowledge-laden. Before these large-scale training models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This makes it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, we have these essential commonsense capabilities to make Web Use Agents possible.
+So what has shaped this sudden interest in Computer Use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and language and vision models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able to with little or no new training data be generally proficient at many language tasks, making them adaptable to many different problems. Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, it is also linguistically challenging and knowledge-laden. Before these large-scale training models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This makes it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, we have these essential commonsense capabilities to make Computer Use Agents possible.
 
 While the precise timing of this work can be explained by the arrival of these capable models, we should also ask what people are trying to accomplish with computer use agents. Many papers point to automating routine, boring or time consuming tasks as a motivation. Many works list automation of tedious tasks or enhancing user experiences as a motivation. The other common motivations are accessibility; making computers and the Internet more generally accessible to those with disabilities. We elaborate on this further in Discussion.
 
@@ -80,8 +80,6 @@ While going through all of these environments and datasets, we had a number of o
 First, unlike with many large-scale datasets in other fields such as ImageNet <d-cite key="imagenet2009"></d-cite>, these datasets are often entirely annotated by the researchers themselves (often graduate students). This often makes scaling these datasets quite challenging and puts more burden on students to create these datasets. Specialized tools such as AgentNet <d-cite key="agentnetdocs"></d-cite> have been developed to try to aid in the annotation process, but the work is still highly specialized.
 
 Second, we found it actually quite difficult to count the number of tasks versus number of instances. In many datasets, there is no real distinction made: each query to a web agent is considered a task and there is exactly one instance of that task. Some of these tasks can be similar or overlap, but there is no categorization of similar tasks or instances. In general, we try to report the size of the dataset in terms of the number of queries unless the dataset has a firm distinction between a task and instance, in which case we report both.
-
-We found it actually quite difficult to count the number of tasks versus number of instances. In many datasets, there is no real distinction made: each query to a web agent is considered a task and there is exactly one instance of that task. Some of these tasks can be similar or overlap, but there is no categorization of similar tasks or instances.
 
 Finally, we note that, especially recently, there are an enormous number of datasets in this area, each with their own data, methodology of collection and input and action spaces. One challenge the field will have going forward is having consistent evaluations and deciding how we are making progress in the field given this. Several papers now have discussed various issues with evaluation <d-cite key="zhu2025establishing,kapoor2025holistic,kapoor2024ai,xue2025illusion,wang2025computer"></d-cite> with suggestions such as evaluating cost and eliminating agent shortcuts <d-cite key="kapoor2024ai"></d-cite>, standardized evaluation harnesses <d-cite key="kapoor2025holistic"></d-cite>, or by making an arena to directly compare Computer Agents with humans<d-cite key="wang2025computer"></d-cite>.
 
@@ -155,9 +153,7 @@ WEBRL <d-cite key="qi2024webrl"></d-cite> adopted a full RL training loop for ex
 
 ### Multi-task Agent Foundation Models
 
-Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
-
-Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings. Others have trained foundation models exclusively for GUI agents by training across many different GUI environments <d-cite key="huang2025spiritsight"></d-cite>.
+Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="szot2025multimodal"></d-cite> they jointly train on a number of tasks including computer use, simulated robotics and games. This work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings. Others have trained foundation models exclusively for GUI agents by training across many different GUI environments <d-cite key="huang2025spiritsight"></d-cite>.
 
 ### Firmament
 
