Agentic Web Discussion

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -247,7 +247,11 @@ There can often be a large disconnect between the use cases, datasets and models
 
 Nevertheless, the potential certainly exists in the future for these agents to be useful for accessibility, not just by those with visual impairment, but people with severe neuropathy or motor control symptoms as well as people with cognitive or memory issues which might make common web tasks difficult. Computer use agents will first have to drastically improve in performance and researchers will have to work with health researchers, providers and affected people to develop truly useful accessibility features using this technology.
 
+### Agentic Web
 
+A recurring discussion point in the philosophy of computer use agents is that current interfaces are built for humans, not autonomous agents. This has motivated arguments for rearchitecting the web for agents rather than forcing agents to reverse-engineer the human-centric interfaces. Stemming from this view, the *Agentic Web* <d-cite key="yang2025agenticwebweavingweb"></d-cite> is framed as a new phase of the internet, in which autonomous agents transact, coordinate, and negotiate on behalf of users over infrastructures explicitly designed for agentic activities. 
+
+On a similar note, Agentic Web Interfaces (AWI) <d-cite key="lu2025buildwebagentsagents"></d-cite> discusses an interaction layer optimized for perception and action with the web interface. Designing AWIs around principles of safety, efficiency, and standardization reframes core challenges of web agents, *e.g.*, DOM parsing and UI understanding, as shared responsibilities of web developers, standards bodies, and agent designers. Yet the argument for building web agents still remains, in the era of agentic web, we will need web agents to navigate through the older pre-agentic websites.
 
 ### Safety/Ethical Concerns
 
