--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -397,6 +397,26 @@ isbn={9780262039246},
   publisher={Springer}
 }
 
+@misc{lu2025buildwebagentsagents,
+      title={Build the web for agents, not agents for the web}, 
+      author={Xing Han Lù and Gaurav Kamath and Marius Mosbach and Siva Reddy},
+      year={2025},
+      eprint={2506.10953},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2506.10953}, 
+}
+
+@misc{yang2025agenticwebweavingweb,
+      title={Agentic Web: Weaving the Next Web with AI Agents}, 
+      author={Yingxuan Yang and Mulei Ma and Yuxuan Huang and Huacan Chai and Chenyu Gong and Haoran Geng and Yuanjian Zhou and Ying Wen and Meng Fang and Muhao Chen and Shangding Gu and Ming Jin and Costas Spanos and Yang Yang and Pieter Abbeel and Dawn Song and Weinan Zhang and Jun Wang},
+      year={2025},
+      eprint={2507.21206},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/2507.21206}, 
+}
+
 @article{chen2024more,
   title={Are more llm calls all you need? towards scaling laws of compound inference systems},
   author={Chen, Lingjiao and Davis, Jared Quincy and Hanin, Boris and Bailis, Peter and Stoica, Ion and Zaharia, Matei and Zou, James},
