--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
 title: Computer Use Survey - A Visual Survey of Computer Use Agents
-description: A comprehensive survey exploring the evolution and current state of AI agents that interact with computers and web interfaces, from early reinforcement learning to modern LLM-based systems.
+description: In recent years, AI systems operating on the web and in computer environments have become a major topic of interest for both academia and industry. The goal of this blog is to provide an interesting and interactive survey of historical and recent works on computer use agents. We define key terms used in the literature, catalogue the expansive list of environments and datasets, discuss the evolution of the methodologies, and assess both today’s landscape and possible paths forward.
 tags: ai agents computer-use web-agents llm
 future: true
 date: 2026-04-27
@@ -46,7 +46,9 @@ In the last few years, and particularly in the most recent past year, AI systems
 
 The goal of this survey is to organize much of the historical and recent work on computer use agents. First, we define exactly what we mean by "Computer Use" in [What is Computer Use](#what-is-computer-use). We then define and categorize different environments, datasets and evaluations for computer use agents in [Environments and Datasets](#environments-and-datasets). Next, we discuss the methodological work in this area in [Models and Methods](#models-and-methods) focusing in particular on the recent trend of "LLM Agents" and provide an accessible explanation of this class of systems and trends within this research. Finally, we discuss ongoing trends, areas for improvement and possible safety and ethical concerns brought about by this research in [Discussion](#discussion).
 
-So what has shaped this sudden interest in computer use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and vision language models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able, with little or no new training data, to be generally proficient at many language tasks, making them adaptable to many different problems. Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, but also linguistically challenging and knowledge-laden. Before these large-scale models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This made it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, but also have these essential commonsense capabilities to make computer use agents possible.
+So what has shaped this sudden interest in computer use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and vision language models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able, with little or no new training data, to be generally proficient at many language tasks, making them adaptable to many different problems.
+
+Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, but also linguistically challenging and knowledge-laden. Before these large-scale models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This made it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, but also have these essential commonsense capabilities to make computer use agents possible.
 
 While the precise timing of this work can be explained by the arrival of these capable models, we should also ask what people are trying to accomplish with computer use agents. Many papers point to automating routine, boring or time consuming tasks as a motivation. Many works list automation of tedious tasks or enhancing user experiences as a motivation. The other common motivations are accessibility; making computers and the Internet more generally accessible to those with disabilities. We elaborate on this further in Discussion.
 
@@ -68,9 +70,7 @@ The landscape of computer use research spans diverse environments, from desktop 
 
 We divide the datasets into several broad categories. Computer and OS Control describes environments which give more or less full simulated access to a computer or operating system. Web Control and Navigation describes environments where access is mostly to the web (live or statically defined pages). Text-Only Web Environments describes specifically text-only versions of web environments. Web QA and Classification are datasets which ask static questions or classifications on web pages as opposed to controllable environments. Finally we include Coding and Assistant Tasks for coding tasks and the broad category of assistant tasks using computer use elements.
 
-We realize that the category "web browsing" is somewhat vague. It can include tasks involved with changing the settings of a browser such as Chrome and tasks requiring finding information on the web <d-cite key="bonatti2024windows"></d-cite>. Similarly, even what is meant by the web can be very different. This can mean access to a few websites such as in VisualWebArena <d-cite key="koh2024visualwebarena"></d-cite> or access to the entire web.
-
-This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
+We realize that the category "web browsing" is somewhat vague. It can include tasks involved with changing the settings of a browser such as Chrome and tasks requiring finding information on the web <d-cite key="bonatti2024windows"></d-cite>. Similarly, even what is meant by the web can be very different. This can mean access to a few websites such as in VisualWebArena <d-cite key="koh2024visualwebarena"></d-cite> or access to the entire web This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
 
 <iframe class="l-page" src="/2026/assets/html/2026-04-27-web-agent/observatory.html" width="100%" height="750" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
 
@@ -232,13 +232,9 @@ Another answer is simply that many web or computer tasks are difficult because t
 
 ### Safety/Ethical Concerns
 
-The emergence of more and more capable computer use agents has raised a number of new ethical and safety issues.
+The emergence of more and more capable computer use agents has raised a number of new ethical and safety issues. One prominent issue is the possibility of Web Agents for malicious use. Hard-coded web agents (often colloquially called "bots") have already been cited as a major issue with so-called "Scalper bots" being used to buy limited-quantity items and resold at massive markups <d-cite key="michigan2021sneaker"></d-cite>. With the possibility of even more sophisticated bots, these concerns are even more acute. For instance, more adaptable and intelligent bots could be able to override mechanisms meant to deter these behaviors such as CAPTCHAs <d-cite key="rawles2024androidinthewild,xie2024osworld"></d-cite>. And as web agents become more capable, they could help automate more web activities used for fraudulent or malicious purposes.
 
-One prominent issue is the possibility of Web Agents for malicious use. Hard-coded web agents (often colloquially called "bots") have already been cited as a major issue with so-called "Scalper bots" being used to buy limited-quantity items and resold at massive markups <d-cite key="michigan2021sneaker"></d-cite>. With the possibility of even more sophisticated bots, these concerns are even more acute. For instance, more adaptable and intelligent bots could be able to override mechanisms meant to deter these behaviors such as CAPTCHAs <d-cite key="rawles2024androidinthewild,xie2024osworld"></d-cite>. And as web agents become more capable, they could help automate more web activities used for fraudulent or malicious purposes.
-
-Another concern is privacy and security. Computer use agents acting on behalf of users have access to extremely sensitive information such as users' profiles, passwords, financial transactions, social media messages and many other kinds of data <d-cite key="pan2024autonomous,zhenggpt"></d-cite>. This information could accidentally or even maliciously be accessed by the agent and sent to others. Mistakes in actions could, for instance, cause web agents to accidentally send un-encrypted passwords to others by email or chat websites. Web agents could also be deliberately designed to steal such information.
-
-For a more thorough discussion of the ethical issues involved in agents, the blog post "AI Agents Are Here. What Now?" <d-cite key="kiela2024ai"></d-cite> provides a detailed breakdown.
+Another concern is privacy and security. Computer use agents acting on behalf of users have access to extremely sensitive information such as users' profiles, passwords, financial transactions, social media messages and many other kinds of data <d-cite key="pan2024autonomous,zhenggpt"></d-cite>. This information could accidentally or even maliciously be accessed by the agent and sent to others. Mistakes in actions could, for instance, cause web agents to accidentally send un-encrypted passwords to others by email or chat websites. Web agents could also be deliberately designed to steal such information. For a more thorough discussion of the ethical issues involved in agents, the blog post "AI Agents Are Here. What Now?" <d-cite key="kiela2024ai"></d-cite> provides a detailed breakdown.
 
 ### Agentic Web
 
@@ -248,18 +244,17 @@ On a similar note, Agentic Web Interfaces (AWI) <d-cite key="lu2025buildwebagent
 
 ### But Why Computer Use Agents?
 
-As discussed in the Introduction, the two most common goals for Computer Use Agents are related to **automation** and **accessibility**.
+As discussed in the Introduction, the two most common goals for Computer Use Agents are related to **automation** and **accessibility**. The automation motivation is compelling - as described in WebGPT <d-cite key="nakano2021webgpt"></d-cite>, they envision: "Picture this scenario: You type in a task description, then relax and enjoy a cup of coffee while watching tasks like booking tickets online, conducting web searches, managing files, and creating PowerPoint presentations get completed automatically." This vision of seamless task automation drives much of the current research effort.
 
-The automation motivation is compelling - as described in WebGPT <d-cite key="nakano2021webgpt"></d-cite>, they envision: "Picture this scenario: You type in a task description, then relax and enjoy a cup of coffee while watching tasks like booking tickets online, conducting web searches, managing files, and creating PowerPoint presentations get completed automatically." This vision of seamless task automation drives much of the current research effort.
-
-The other motivation is accessibility <d-cite key="li2024effects,bonatti2024windows"></d-cite>, with researchers stating that this line of work will "make digital devices more accessible" <d-cite key="pan2024autonomous"></d-cite>. Several potential issues emerge however.
-
-One concern is that many current agents rely implicitly or explicitly on accessibility features already built into operating systems or the web to function <d-cite key="cao2024spider2,koh2024visualwebarena,pan2024autonomous,pan2024webcanvas"></d-cite>. Unfortunately, as mentioned in <d-cite key="gou2024navigating"></d-cite>, 95.9% of webpages contain errors in accessibility including missing alt text in images or missing form input labels at around 57 errors per page <d-cite key="webaim"></d-cite>. Relying on web accessibility to be correct is an unfortunate issue for those who use these features directly and makes it more difficult for web agents to help these same people if they rely on the same features being correct.
+The other motivation is accessibility <d-cite key="li2024effects,bonatti2024windows"></d-cite>, with researchers stating that this line of work will "make digital devices more accessible" <d-cite key="pan2024autonomous"></d-cite>. Several potential issues emerge however. One concern is that many current agents rely implicitly or explicitly on accessibility features already built into operating systems or the web to function <d-cite key="cao2024spider2,koh2024visualwebarena,pan2024autonomous,pan2024webcanvas"></d-cite>. Unfortunately, as mentioned in <d-cite key="gou2024navigating"></d-cite>, 95.9% of webpages contain errors in accessibility including missing alt text in images or missing form input labels at around 57 errors per page <d-cite key="webaim"></d-cite>. Relying on web accessibility to be correct is an unfortunate issue for those who use these features directly and makes it more difficult for web agents to help these same people if they rely on the same features being correct.
 
 There can often be a large disconnect between the use cases, datasets and models thought up by researchers (often mostly sighted people) and those actually important and useful to blind and visually impaired people. As noted in <d-cite key="gurari2018vizwiz"></d-cite> who studied this in the context of Visual Question Answering, the kinds of questions actually asked by blind users varied significantly from prior VQA datasets. Similarly, we might expect that the use cases of the visually impaired for online agents or assistants might be significantly different from those imagined by current lines of research. Future work which seeks to improve accessibility must similarly to <d-cite key="gurari2018vizwiz"></d-cite> use the actual data and requirements from the blind to be genuinely helpful as the overall capabilities of these systems improves.
 
 Nevertheless, the potential certainly exists in the future for these agents to be useful for accessibility, not just by those with visual impairment, but people with severe neuropathy or motor control symptoms as well as people with cognitive or memory issues which might make common web tasks difficult. Computer use agents will first have to drastically improve in performance and researchers will have to work with health researchers, providers and affected people to develop truly useful accessibility features using this technology.
 
+<iframe class="l-page" src="/2026/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
+
 ## Acknowledgments
 
-This survey was adapted from the original interactive web version created by anonymous authors. We tried to take advantage of the medium of the web specifically to make the survey a bit different and more interactive for readers. In addition, certain parts of the survey, such as the list of datasets would simply not have worked in a normal linear blog. Claude Sonnet 4 was used to help build the website. Special thanks to anonymous contributors who provided valuable feedback and helped debug browser compatibility issues.
+This survey was adapted from the original interactive web version created by the authors. We tried to take advantage of the medium of the web specifically to make the survey a bit different and more interactive for readers. In addition, certain parts of the survey, such as the list of datasets would simply not have worked in a normal linear blog. Claude Sonnet 4 was used to help build the website. 
+
