--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -17,7 +17,28 @@ toc:
   - name: What is Computer Use
   - name: Environments and Datasets
   - name: Models and Methods
+    subsections:
+      - name: Pre-LLM Work
+      - name: Computer Use LM Agents
+      - name: Base Models for LLM Agents
+        subsections:
+          - name: Fixed Base Models
+          - name: Supervised Finetuning
+          - name: RL/Exploration Finetuning
+      - name: Multi-task Agent Foundation Models
+      - name: Firmament
+      - name: Proprietary Systems
   - name: Discussion
+    subsections:
+      - name: Areas for Improvement
+        subsections:
+          - name: Planning
+          - name: Input/Output Representation
+          - name: Lack of Training Data
+          - name: Long-horizon Problems are Hard
+      - name: Safety/Ethical Concerns
+      - name: Agentic Web
+      - name: But Why Computer Use Agents?
 
 authors:
   - name: Anonymous
