Fixed the citation issues

--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -1150,7 +1150,7 @@ isbn={9780262039246},
 }
 @article{webchorearenawebchorearena,
   title={WebChoreArena: Evaluating Web Browsing Agents on Realistic Tedious Web Tasks},
-  author={WebChoreArena, WebArena}
+  author={Atsuyuki Miyai, Zaiying Zhao, Kazuki Egashira, Atsuki Sato, Tatsumi Sunada, Shota Onohara, Hiromasa Yamanishi, Mashiro Toyooka, Kunato Nishina, Ryoma Maeda, Kiyoharu Aizawa, Toshihiko Yamasaki}
 }
 @article{bragg2025astabench,
   title={AstaBench: Rigorous Benchmarking of AI Agents with a Scientific Research Suite},
